--- a/fabProjeto/fabProjeto.csproj
+++ b/fabProjeto/fabProjeto.csproj
@@ -41,6 +41,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -58,18 +59,6 @@
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Report.Viewer.11.0.0.0\lib\net\Microsoft.ReportViewer.Common.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Report.Viewer.11.0.0.0\lib\net\Microsoft.ReportViewer.ProcessingObjectModel.DLL</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Report.Viewer.11.0.0.0\lib\net\Microsoft.ReportViewer.WebForms.DLL</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
@@ -107,11 +96,6 @@
     <Compile Include="Code\DTO%28propriedades%29\ClienteDTO.cs" />
     <Compile Include="Code\DTO%28propriedades%29\usuarioDTO.cs" />
     <Compile Include="Context\Contexto.cs" />
-    <Compile Include="DataSet1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet1.xsd</DependentUpon>
-    </Compile>
     <Compile Include="FabricaDBDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -207,6 +191,12 @@
     <Compile Include="Telas\frmProdutos.Designer.cs">
       <DependentUpon>frmProdutos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Telas\frmrelatorio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Telas\frmrelatorio.Designer.cs">
+      <DependentUpon>frmrelatorio.cs</DependentUpon>
+    </Compile>
     <Compile Include="Telas\frmUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -233,12 +223,6 @@
     <Compile Include="Telas\frmlogin.Designer.cs">
       <DependentUpon>frmlogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Telas\reports.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Telas\reports.Designer.cs">
-      <DependentUpon>reports.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Migrations\201703210255066_InitialCreate.resx">
       <DependentUpon>201703210255066_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
@@ -248,7 +232,6 @@
     <EmbeddedResource Include="Migrations\201703220215412_fab2.resx">
       <DependentUpon>201703220215412_fab2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Report1.rdlc" />
     <EmbeddedResource Include="Telas\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -285,6 +268,9 @@
     <EmbeddedResource Include="Telas\frmProdutos.resx">
       <DependentUpon>frmProdutos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Telas\FrmRelatorio.resx">
+      <DependentUpon>frmrelatorio.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Telas\frmUsuarios.resx">
       <DependentUpon>frmUsuarios.cs</DependentUpon>
     </EmbeddedResource>
@@ -306,20 +292,8 @@
     <EmbeddedResource Include="Telas\frmlogin.resx">
       <DependentUpon>frmlogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Telas\reports.resx">
-      <DependentUpon>reports.cs</DependentUpon>
-    </EmbeddedResource>
-    <None Include="DataSet1.xsc">
-      <DependentUpon>DataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet1.xsd">
-      <SubType>Designer</SubType>
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet1.Designer.cs</LastGenOutput>
-    </None>
-    <None Include="DataSet1.xss">
-      <DependentUpon>DataSet1.xsd</DependentUpon>
-    </None>
+    <EmbeddedResource Include="Telas\Report1.rdlc" />
+    <EmbeddedResource Include="Telas\Report2.rdlc" />
     <None Include="FabricaDBDataSet.xsc">
       <DependentUpon>FabricaDBDataSet.xsd</DependentUpon>
     </None>
